--- a/src/main/resources/com/company/myoption/messages_en.properties
+++ b/src/main/resources/com/company/myoption/messages_en.properties
@@ -1,5 +1,6 @@
 localeDisplayName.en=English
 
+
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
 com.company.myoption.entity/Bill=Bill
@@ -45,17 +46,20 @@ com.company.myoption.screen.login/loginFailed = Login failed
 com.company.myoption.screen.login/loginScreen.rememberMe=Remember me
 com.company.myoption.screen.login/passwordPlaceholder = Password
 com.company.myoption.screen.login/usernamePlaceholder = User name
-com.company.myoption.screen.login/welcomeLabel = Welcome to MyOption application
+com.company.myoption.screen.login/welcomeLabel = Welcome to MyOperations
 
-com.company.myoption.screen.main/application.caption = MyOption application
-com.company.myoption.screen.main/application.logoLabel = MyOption application
+com.company.myoption.screen.main/application.caption = MyOperations
+com.company.myoption.screen.main/application.logoLabel = MyOperations
 com.company.myoption.screen.main/sideMenuCollapse = Collapse menu
 com.company.myoption.screen.main/logoutBtnDescription = Logout
 
 com.company.myoption.screen.operation/operationBrowse.caption=Operations
 com.company.myoption.screen.operation/operationBrowse.menu=Operations
 com.company.myoption.screen.operation/operationCalculate.caption=Operations
-com.company.myoption.screen.operation/operationCalculate.menu=Operations
+com.company.myoption.screen.operation/operationCalculate.menu=Расходы
+com.company.myoption.screen.operation/operationCalculation.caption=Operations
+com.company.myoption.screen.operation/operationCalculation.menu=Operations
+com.company.myoption.screen.operation/operationCancellation.caption=Operation editor
 com.company.myoption.screen.operation/operationEdit.caption=Operation editor
 
 com.company.myoption.screen.user/UserBrowse.caption=Users
